Fix: Remove Calendar on mobile; kept availablity cards

--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -26,3 +26,10 @@
 .cardContent {
   font-size: 0.6rem;
 }
+
+@media (max-width: 768px) {
+  .card {
+    min-height: 65px;
+  }
+
+}
