--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -41,8 +41,5 @@
 @media screen and (max-width: 768px) {
   .layout {
     grid-template-columns: 1fr;
-    grid-template-areas:
-      'header'
-      'dashboard';
   }
 }
